docs/source/_static/css/ip_custom.css
/* d3 Graphing on home page */

.links line {
  stroke: #999;
  stroke-opacity: 0.6;
}

.nodes circle {
  stroke: #fff;
  stroke-width: 1.5px;
}

text {
  font-family: sans-serif;
  font-size: 10px;
}

.alpha-jumbotron{
    max-height: 2rem;
    background-color: #a83232;
    color: white;
}
/* code blocks */
pre code {
  background-color: #eee;
  border: 1px solid #999;
  display: block;
  padding: 20px;
}

.bordered-block {
    border: 1px solid #999;
}
/* misc */
.center-block {
   margin-left:auto;
   margin-right:auto;
   display:block;
}

.card-container {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%
}

.img-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.ip-card {
    max-width: 40rem;
    height: 25rem;
}

.landing-card-image{
    object-fit: contain;
    width: 80%;
    height:13rem;
}

.fade-in-fast {
  animation: fadeIn ease .5s;
  -webkit-animation: fadeIn ease .5s;
  -moz-animation: fadeIn ease .5s;
  -o-animation: fadeIn ease .5s;
  -ms-animation: fadeIn ease .5s;
}
.fade-in-2-sec {
  animation: fadeIn ease 2s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}
@keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
    }
}

